--- a/src/components/ScoreboardGrid.css
+++ b/src/components/ScoreboardGrid.css
@@ -3,16 +3,17 @@
 .scoreboard-grid {
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-between;
+    justify-content: left;
     /* Adjust alignment based on your preference */
-    gap: 10px;
+    gap: 20px;
     margin: 10px;
+    background-color: black;
 }
 
 .scoreboard {
-    border: 1px solid #e2e2e2;
+    border: 1px solid black;
     border-radius: 10px;
-    background-color: white;
+    background-color: rgb(54, 54, 54);
     padding: 20px;
     display: flex;
     flex-direction: column;
@@ -20,7 +21,7 @@
     color: black;
     width: calc(20% - 20px);
     /* Each scoreboard takes x% width minus gap */
-    margin-bottom: 10px;
+    margin-bottom: 5px;
     /* Ensure a gap between rows */
 }
 
@@ -45,25 +46,25 @@
 .team h2 {
     margin: 0;
     font-size: 20px;
-    color: black;
+    color: white;
 }
 
 .team p {
     margin: 0;
     font-size: 16px;
-    color: black;
+    color: white;
 }
 
 .versus {
     font-size: 24px;
-    margin: 10px 0;
-    color: black;
+    margin: 5px 0;
+    color: white;
     text-align: center;
 }
 
 .game-details p {
     font-size: 14px;
-    color: black;
+    color: white;
     text-align: center;
 }
 
