--- a/src/components/TeamInfoPopup.css
+++ b/src/components/TeamInfoPopup.css
@@ -11,88 +11,88 @@
     justify-content: center;
     align-items: center;
     z-index: 1000;
-  }
-  
-  .team-info-popup {
+}
+
+.team-info-popup {
     background: rgb(0, 0, 0);
     padding: 20px;
     border-radius: 8px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
-    width: 80%; /* Adjust width as needed */
+    width: 85%;
     text-align: left;
-  }
-  
-  .team-info-header {
+}
+
+.team-info-header {
     display: flex;
     justify-content: flex-end;
-  }
-  
-  .close-button {
+}
+
+.close-button {
     cursor: pointer;
     font-size: 20px;
     color: #555;
-  }
-  
-  .team-info-content {
-    display: flex;
-    justify-content: space-between;
-  }
-  
-  .left-column {
-    flex: 1;
-    padding-right: 20px;
-  }
-  
-  .team-logo {
-    max-width: 60%;
-    height: auto;
-  }
-  
-  .team-details {
-    margin-top: 10px;
-    color: white;
-  }
+}
 
-  .team-info-content {
+.team-info-content {
     display: flex;
     justify-content: space-between;
-    color: white;
-  }
-  
- 
+}
+
 .left-column {
     flex: 1;
-  }
-  
-  .center-column {
-    flex: 1;
-  }
+    padding-right: 20px;
+}
 
-  .center-column p, h3 {
+.team-logo {
+    max-width: 60%;
+    height: auto;
+}
+
+.team-details {
+    margin-top: 10px;
+    color: white;
+}
+
+.team-info-content {
+    display: flex;
+    justify-content: space-between;
+    color: white;
+}
+
+.left-column {
+    flex: 1;
+}
+
+.center-column {
+    flex: 1;
+}
+
+.center-column p,
+h3 {
     margin-top: 4px;
     margin-bottom: 8px;
-  }
+}
 
-  .center-column h2 {
+.center-column h2 {
     margin-bottom: 15px;
-  }
-  
-  .right-column {
-    flex: 2; /* Adjust the flex size as needed */
+}
+
+.right-column {
+    flex: 2;
     padding-left: 20px;
-    overflow-x: auto; /* Allow horizontal scrolling if needed */
-  }
-  
-  /* Additional styles for the table to prevent text wrapping */
-  table {
+    overflow-x: auto;
+}
+
+table {
     width: 100%;
     border-collapse: collapse;
     margin-top: 10px;
-  }
-  
-  th, td {
+}
+
+th,
+td {
     border: 1px solid #ddd;
-    padding: 8px;
+    padding: 5px;
     text-align: left;
-    white-space: nowrap; /* Prevent text wrapping */
-  }
+    white-space: nowrap;
+}
